# hh_test_crypto

./: .gitignore  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
api/: Dockerfile  main.py
client/: Dockerfile  db.py  db_methods.py  main.py
tests/: conftest.py  test_client.py
