[tool.poetry]
name = "hh-test-crypto"
version = "0.1.0"
description = ""
authors = ["Eugene <giveuper39@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
aiohttp = "^3.10.10"
fastapi = "^0.115.4"
black = "^24.10.0"
ruff = "^0.7.1"
peewee = "^3.17.7"
pytest = "^8.3.3"
pytest-coverage = "^0.0"
uvicorn = "^0.32.0"
python-dotenv = "^1.0.1"

[tool.black]
line-length = 120


[tool.ruff.lint]
select = ["ALL"]
ignore = ["D100", "D101", "D104", "D106", "B904"]

[tool.ruff]
line-length = 120

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
